- 
    Bug 
- 
    Resolution: Fixed
- 
    P3: Somewhat important 
- 
    6.8
- 
        
- 
        453660332 (dev), 55cc5c503 (6.7), 5549dc462 (6.6), cd0796bf6 (tqtc/lts-6.5)
the player example does not update the "buffering" state.
steps to reproduce:
- run qtmultimedia/examples/multimedia/player
- select file
- play file
current behaviour: window title shows "Buffering 0%"
expected behaviour "Buffering" will be updated
| For Gerrit Dashboard: QTBUG-123459 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 550042,7 | GStreamer - Set Buffering Property in uridecodebin | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 | 
| 550949,2 | GStreamer - Set Buffering Property in uridecodebin | 6.7 | qt/qtmultimedia | Status: MERGED | +2 | 0 | 
| 551080,2 | GStreamer - Set Buffering Property in uridecodebin | 6.6 | qt/qtmultimedia | Status: MERGED | +2 | 0 | 
| 551180,2 | GStreamer - Set Buffering Property in uridecodebin | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |